--- a/ingest.yaml
+++ b/ingest.yaml
@@ -1,5 +1,12 @@
-source_table_name: for_hire_vehicle
-dest_table_name: fhv_pg
-timestamp_column: etl_sync_date
-write_disposition: append
-initial_load_date: null
+sources:
+  - source_table_name: for_hire_vehicle
+    dest_table_name: fhv_pg
+    timestamp_column: etl_sync_date
+    write_disposition: append
+    initial_load_date: null
+
+  - source_table_name: new_york_vehicles
+    dest_table_name: new_york_fhv
+    timestamp_column: etl_sync_date
+    write_disposition: append
+    initial_load_date: null
